updated post description styling

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 		<section class="postList"></section><br>
 		<button id="jokes-btn" class="jokes-btn">Dad Jokes Please!</button>
 		<section id="jokes" class="jokes"></section>
-		<footer></footer>
+		<footer id="footer" class="footer"></footer>
 	</main>
 
     <script type="module" src="./scripts/main.js"></script>
