updated more css spacing etc

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,13 @@
 
 <head>
     <meta charset="utf-8">
+	
     <title>GiffyGram C51 NSS</title>
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=PT+Serif+Caption&family=Poppins&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 
