updated dadjokes button styling

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 		<div class="flex-container">
 			
 			<div class="the-jokes">
-				<button id="jokes-btn" class="jokes-btn">Dad Jokes Please!</button>
+				<button id="jokes-btn" class="jokes-btn">Press For Dad Jokes!</button>
 				<section id="jokes" class="jokes"><!-- jokes from API go here --></section>
 			</div> <!-- closes the-jokes-->
 
