--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=PT+Serif+Caption&family=Poppins&display=swap" rel="stylesheet">
+	<link rel="shortcut icon" type="image/jpg" href="./images/giffyfavicon.png"/>
 
     <link rel="stylesheet" href="./styles/main.css">
 </head>
